# solosec

./: AGENTS.md  CLEANUP_REPORT.md  Dockerfile  README.md  action.yml  install.ps1  install.sh  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml  solosec.yml
docs/: README.md  contributing.md  getting-started.md
docs/architecture/: overview.md
docs/guides/: ci-github-actions.md  configuring-scans.md  running-with-docker.md  troubleshooting.md
docs/reference/: cli.md  configuration.md  report-format.md
src/gavel/: __init__.py  _models.py  aggregate.py  cli.py  config.py  tooling.py
src/solosec/: __init__.py  aggregate.py  cli.py  config.py  tooling.py
src/warden/: __init__.py  aggregate.py  cli.py  config.py  tooling.py
tests/: test_aggregate.py  test_cli.py  test_config.py
tests/fixtures/: gitleaks.json  semgrep.json  trivy.json  zap.json
