[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "solosec"
version = "0.1.0"
description = "Security automation for development teams."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "maltemindedal" }]
dependencies = ["rich>=13.9,<15", "semgrep>=1.128,<2"]

[project.scripts]
solosec = "solosec.cli:main"
solosec-config = "solosec.config:main"
solosec-aggregate = "solosec.aggregate:main"

[dependency-groups]
dev = ["pyright>=1.1.400,<2", "pytest>=9.0.3,<10", "pytest-cov>=6.1,<7", "ruff>=0.11.6,<0.12"]

[tool.uv]
# Dependency cooldown: ignore distributions published in the last 7 days, so a
# freshly-published malicious or yanked release cannot be picked up silently.
# Relative rather than a fixed date, so the window rolls without maintenance.
exclude-newer = "7 days"
default-groups = ["dev"]
# semgrep pins mcp==1.23.3, which carries GHSA-hvrp-rf83-w775, GHSA-jpw9-pfvf-9f58
# and GHSA-vj7q-gjh5-988w. We only use semgrep's CLI scanner, never its MCP server,
# so overriding the pin to the patched release is safe.
override-dependencies = ["mcp>=1.28.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/solosec"]

[tool.hatch.build.targets.sdist]
include = [
  "src/solosec",
  "bin",
  "README.md",
  "LICENSE",
  "Dockerfile",
  "install.ps1",
  "install.sh",
  "action.yml",
  ".github/workflows/ci.yml",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "bin"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "W"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src", "tests", "bin"]
extraPaths = ["src"]
exclude = [".venv", "build", "dist", "**/node_modules", "**/__pycache__", "**/.*"]
reportMissingTypeStubs = false
reportUnnecessaryTypeIgnoreComment = true
